tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__BestCrossbow-AAAAAAAAAAAAAAAAAAAF9g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1526,
  "prerequisites": [
    990
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Energetic alloy has proven to be an amazing material. Its light weight and high stiffness makes it perfect for a crossbow limb. It is slightly slower to draw but still has amazing stopping power with its very high bolt speed. Durability is much improved over a carbon limb.\n\nThe material would also make an excellent bolt body. Perhaps you will find a suitable tip to match?",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lBest Crossbow?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    990
  ],
  "rewards": [],
  "tasks": []
}
