tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__BetterBolts-AAAAAAAAAAAAAAAAAAAF9A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1524,
  "prerequisites": [
    951
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you are in MV and have an EBF, you can make new bolts with vanadiumsteel-tipped magnalium. Your enemies will tremble at your might.\n\nCheck \"fletching\" under NEI for fletching options.\n\nGood hunting!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lBetter Bolts",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    951
  ],
  "rewards": [],
  "tasks": []
}
