tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__WithoutDying-AAAAAAAAAAAAAAAAAAAACw==__BowArrowsandQuiv-AAAAAAAAAAAAAAAAAAAClQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 661,
  "prerequisites": [
    97
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Wow, your first handmade §oehm§r machine made bow. Now it's time to make a quiver and maybe some arrows.\n\nTo place arrows in the quiver, put the quiver and the stack of arrows in a crafting grid. Make sure the Gameplay key Special doesn't conflict with other keybinds. By default, it is Z. When you have the bow selected, use Z to swap arrow slots in the quiver.\n\nWhile it seems like these might be worthless, these arrows do have special uses. You really want to share a cookie with friends, don't you?\n\nLet's go hunt a bit.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lBow, Arrows and Quiver",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    97
  ],
  "rewards": [],
  "tasks": []
}
